# RoR2Mod

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  injector.cpp  mingw-toolchain.cmake
.github/workflows/: README.md  build.yml  release.yml
hooks/: install.sh  post-commit  pre-commit  prepare-commit-msg
scripts/: VERSIONING.md  bump_version.sh  dll_to_header.py  extract_spawn_cards.py  load_dll_symbols.py  process_crash_log.py  update_game_structs.py  version_bump.py
src/: dllmain.cpp  version.h  version.hpp
src/config/: ConfigManager.cpp  ConfigManager.h
src/core/: MonoList.cpp  MonoList.h  MonoList.hpp  MonoRuntime.cpp  MonoRuntime.h  MonoRuntime.hpp  MonoTypes.h
src/fonts/: FontAwesome6Solid900.hpp  FontManager.cpp  FontManager.h  FontManager.hpp  JetBrainsMonoReg.h
src/game/: GameFunctions.cpp  GameFunctions.h  GameFunctions.hpp  GameStructs.h  GameStructs.hpp  InteractablePaths.h
src/globals/: globals.cpp  globals.h  globals.hpp
src/helper/: CSharpHelper.cpp  CSharpHelper.h  CSharpHelper.hpp  RoR2ModHelper.cs  RoR2ModHelper.csproj
src/hooks/: hooks.cpp  hooks.h  hooks.hpp  kiero.cpp  kiero.h
src/menu/: InputControls.cpp  InputControls.h  ItemsUI.cpp  ItemsUI.h  ItemsUI.hpp  NotificationManager.cpp  NotificationManager.h  NotificationManager.hpp  menu.cpp  menu.h  menu.hpp
src/modules/: ESPModule.cpp  ESPModule.h  ESPModule.hpp  EnemyModule.cpp  EnemyModule.h  EnemyModule.hpp  EnemySpawningModule.cpp  EnemySpawningModule.h  EnemySpawningModule.hpp  InteractableSpawningModule.cpp  InteractableSpawningModule.h  InteractableSpawningModule.hpp  ModuleBase.h  ModuleBase.hpp  PlayerModule.cpp  PlayerModule.h  PlayerModule.hpp  WorldModule.cpp  WorldModule.h  WorldModule.hpp
src/utils/: Logger.cpp  Logger.h  Logger.hpp  Math.cpp  Math.hpp  ModStructs.h  ModStructs.hpp  MonoApi.cpp  MonoApi.h  MonoApi.hpp  RenderUtils.cpp  RenderUtils.h  RenderUtils.hpp
